--- a/public/css/style.css
+++ b/public/css/style.css
@@ -209,3 +209,28 @@ footer ul li a:hover {
     width: 300px;
     cursor: pointer;
 }
+
+.container {
+    margin: 0 auto;
+    width: 75%;
+    text-align: center;
+}
+
+.movie-data-list {
+    list-style: none;
+    line-height: 2rem;
+}
+
+span {
+    font-weight: bold;
+}
+
+.image-container img {
+    width: 250px;
+    border-radius: 5px;
+}
+
+form {
+    width: 75%;
+    margin: 0 auto;
+}
