add chat window

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,6 +45,15 @@
                 </div>
             </div>
         </div>
+        
+        <div class="chat-container">
+            <iframe
+                allow="microphone;"
+                width="350"
+                height="430"
+                src="https://console.dialogflow.com/api-client/demo/embedded/5e6260bb-4e65-45a5-a326-7102832fbd5d">
+            </iframe>
+        </div>
 
         <footer>
             <h3>Find me to discuss the movie</h3>
